src/test/ui/coherence/coherence-orphan.old.stderr
error[E0117]: only traits defined in the current crate can be implemented for arbitrary types
  --> $DIR/coherence-orphan.rs:13:1
   |
LL | impl TheTrait<usize> for isize { }
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ impl doesn't use types inside crate
   |
   = note: `isize` is not defined in the current create
   = note: `usize` is not defined in the current create
   = note: define and implement a trait or new type instead

error[E0117]: only traits defined in the current crate can be implemented for arbitrary types
  --> $DIR/coherence-orphan.rs:21:1
   |
LL | impl !Send for Vec<isize> { }
   | ^^^^^^^^^^^^^^^^^^^^^^^^^ impl doesn't use types inside crate
   |
   = note: `std::vec::Vec<isize>` is not defined in the current create
   = note: define and implement a trait or new type instead

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0117`.
